--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@google/generative-ai": "^0.21.0",
     "@radix-ui/react-slot": "^1.1.1",
     "@react-three/fiber": "^8.17.10",
+    "@tabler/icons-react": "^3.26.0",
     "@types/three": "^0.171.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
