--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.15.0",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.469.0",
-    "next": "15.1.3",
+    "next": "^15.4.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.6.0",
